--- a/Deliverable 1/SRS.tex
+++ b/Deliverable 1/SRS.tex
@@ -64,7 +64,16 @@
 \subsection{Definitions, Acronyms, and Abbreviations}
 \label{sub:definitions_acronyms_and_abbreviations}
 % Begin SubSection
-
+\begin{enumerate}
+\item \textbf{BBC}: British Brodcasting Services, a public service broadcaster based in the UK.
+\item \textbf{Climate Change}: Extended and permananet change, as experienced by long term weather patterns.
+\item \textbf{GHG}: Greenhouse Gases, classification for gases in the atmosphere that absorb and emit radiation within the thermal infrared range. Major contributor of Global Warming.
+\item \textbf{Global Warming}: Gradual incease in average surface temperature of Earth.
+\item\textbf{FPS}: Frames per second,  frequency at which a series of images (frames) are displayed, consecutively.gi
+\item \textbf{SDLC}: Software Development Life Cycle, described as the frameowrk used to define the hierarchy of tasks to be performed at each stage of the software development process.
+\item \textbf{SL4A}:  Scripting Layer for Android, library used for creating and executing various scripting languages, based in Android systems.
+\item \textbf{TTS}: Text to speech.
+\end{enumerate}
 % End SubSection
 
 \subsection{References}
@@ -77,7 +86,7 @@
 \subsection{Overview}
 \label{sub:overview}
 % Begin SubSection
-	The rest of the document is divided into three sections. The second section provides an abstract overview of the product and its major functionality. The section defines the constraints for the system and the assumptions that affect the system’s requirements, all the while highlighting the proposed system's benefits that distinguish it from simillar products available. The third section provides a detailed description of the functional requirements perceived, which describe the specific behavior of the system. The contents of this section are classified as business events and viewpoints. The fourth and final section provides a detailed description of the non functional requirements, which provide a detailed description on specific areas of operation of the system.  
+	The rest of the document is divided into three sections. The second section provides an abstract overview of the product and its major functionality. The section defines the constraints for the system and the assumptions that affect the system’s requirements, all the while highlighting the proposed system's benefits that distinguish it from simillar products available. The third section provides a detailed description of the functional requirements perceived, which describe the specific behavior of the system. The contents of this section are classified as business events and viewpoints. The fourth and final section provides a detailed description of the non functional requirements, which describe specific areas of operation of the system.  
 
 % End SubSection
 
