--- a/Deliverable 1/SRS.tex
+++ b/Deliverable 1/SRS.tex
@@ -800,12 +800,35 @@ n.a
 % End SubSection
 
 % End Section
-
+\newpage
 \appendix
 \section{Division of Labour}
 \label{sec:division_of_labour}
 % Begin Section
-Include a Division of Labour sheet which indicates the contributions of each team member. This sheet must be signed by all team members.
+Division of Labour sheet which indicating the contributions of each team member. This sheet must be signed by all team members.
+\\
+\\
+\begin{tabular}{ | l | l | }
+\hline
+	\textbf{Contributor Name} & \textbf{Contributions}  \\
+  	\hline
+  	Leo Yuan & Section 3.* Functional Requirements Planning and Formalization in association with Haris\\ 		\hline
+  	Haris Khan & Section 3.* Functional Requirements Planning and Formalization in association with Leo \\
+  	\hline
+  	Riley McGee & Section 2.* Overall Description
+  	\\
+  	\hline
+  	Vishesh Gulatee & Section 1.* Introduction
+  	\\
+  	\hline
+  	James Taylor & Section 4.* Non-Functional Requirements
+  	\\
+  	\hline
+\end{tabular}
+\\
+\\
+By signing below you agree to the work divisions stated above correctly representing all contributions made:
+
 % End Section
 \nocite{MDes}
 \nocite{CAQ}
