--- a/Deliverable 1/SRS.tex
+++ b/Deliverable 1/SRS.tex
@@ -812,8 +812,8 @@ Division of Labour sheet which indicating the contributions of each team member.
 \hline
 	\textbf{Contributor Name} & \textbf{Contributions}  \\
   	\hline
-  	Leo Yuan & Section 3.* Functional Requirements Planning and Formalization in association with Haris\\ 		\hline
-  	Haris Khan & Section 3.* Functional Requirements Planning and Formalization in association with Leo \\
+  	Wenbin Yuan & Section 3.* Functional Requirements Planning and Formalization in association with Haris\\ 		\hline
+  	Haris Khan & Section 3.* Functional Requirements Planning and Formalization in association with Wenbin \\
   	\hline
   	Riley McGee & Section 2.* Overall Description
   	\\
