--- a/Deliverable 1/SRS.tex
+++ b/Deliverable 1/SRS.tex
@@ -48,17 +48,17 @@
 \subsection{Purpose}
 \label{sub:purpose}
 % Begin SubSection
-	The purpose of the document is to provide a detailed description of the requirements of the application "Climatar". It serves to highlight objectives and key features, the application is perceived to embody, while also describing the scope, constraints and interface of the applicarion. This document is intended for the members of the development team (ie. authors of the document) as reference throughout the various stages of the SDLC.
+	The purpose of the document is to provide a detailed description of the requirements of the software application desribed in the scope. It serves to highlight objectives and key features of the application, while also describing constraints and interface of the system-to-be, and it's environment. This document is intended for use by the stakeholders of the project as reference throughout the various stages of the SDLC. The primary stakeholders include Prof. Ridha Khedri, who has commisioned this project as part of Software Engineering course SE3A04 as provided by McMaster University, Tutorial Assistants for SE3A04, who are responsible with oversight and review of the deliverables of the project and members of the development team (ie. authors of the document). Other stakeholders include any future teams of developers and managers, that may maintain the application or use this project application as an open source reference. 
 % End SubSection
 
 \subsection{Scope}
 \label{sub:scope}
 % Begin SubSection
-	“Climatar” is a UI based mobile game, designed for Android OS, that simulates climate change as experienced by the world made popular by animated TV series, Avatar: The Last Airbender. The game generates news events, which describe real world actions, policies and decisions, which either contribute to or deter climate change, influencing variables that monitor the environmental sphere of the world.These news events are influenced by factors such as energy consumption, political stance, lifestyle and economic motivation and the enactment of these events are determined by the user.
- 
-	\cite{WoA}The geography of the model world is divided into four independent nations: Air Nomads, Water Tribe, Fire Nation and Earth Kingdom. The user has the option to chose one of these nations, enacting the news events pertaining to chosen nation or to play god, enacting the news events pertaining to all four nations. Each nation follows a unique political system, culture and lifestyle, and uses the element specified in its name as its primary source of energy. These elements are utilized by special portion of the population known as benders, who have the ability to naturally manipulate a specific element. The game ends once the model world has experienced sufficient damage due to climate change, severly changing the world's eco-system. 
+	“Climatar” is a UI based mobile game, designed for Android OS, that simulates climate change as experienced by the world made popular by animated TV series, Avatar: The Last Airbender. The game generates news events, which describe real world actions, policies and decisions, which either contribute to or deter climate change, influencing variables that monitor the environmental sphere of the applications model world.
 
-	The application shall provide users with a save and load game option, allowing the user to play the game, as when they please. The game should be available for download through an application store or public repository.	
+The world of Avatar has been intentionally selected for this simulation, as it's political, social and economic environment describes a simpler model of the contemporary world and allows for the independent analysis of consequences of different motivations . In addition, the world provides a fictional backdrop for the gaming application.\cite{WoA}The geography of the model world is divided into four independent nations: Air Nomads, Water Tribe, Fire Nation and Earth Kingdom. The user will have the option to choose one of these nations, enacting the news events pertaining to the chosen nation or to play god, enacting the news events pertaining to all four nations. Each nation follows a unique political system, culture and lifestyle, and uses the element specified in its name as its primary source of energy. These elements are utilized by special portion of the population known as benders, who have the ability to naturally manipulate a specific element. 
+
+The objective of the game is to regulate news events, in order to minimize the effects of greenhouse gasses and because of gloabal warming. The game ends once the model world has experienced sufficient damage due to climate change, severly changing the world's eco-system, and resulting the user with a loss. The application shall provide users with a save and load game option, allowing the user to play the game, as when they please. The game should be available for download through an application store or public repository.	
 % End SubSection
 
 \subsection{Definitions, Acronyms, and Abbreviations}
@@ -86,8 +86,7 @@
 \subsection{Overview}
 \label{sub:overview}
 % Begin SubSection
-	The rest of the document is divided into three sections. The second section provides an abstract overview of the product and its major functionality. The section defines the constraints for the system and the assumptions that affect the system’s requirements, all the while highlighting the proposed system's benefits that distinguish it from simillar products available. The third section provides a detailed description of the functional requirements perceived, which describe the specific behavior of the system. The contents of this section are classified as business events and viewpoints. The fourth and final section provides a detailed description of the non functional requirements, which describe specific areas of operation of the system.  
-
+	The rest of the document is divided into three sections. The second section provides an abstract overview of the product and its major functionality. The section defines the constraints for the system and the assumptions that affect the system’s requirements, all the while highlighting the proposed system's benefits that distinguish it from simillar products available. The third section provides a detailed description of the functional requirements perceived, which describe the specific behavior of the system. The contents of this section are classified as business events and viewpoints. The fourth and final section provides a detailed description of the non-functional requirements, which describe the quality attributes of the system. The plan for implementing functional and non-functional requirements will be detailed in system design and system architecture documents. 
 % End SubSection
 
 % End Section
